--- a/ejercicios.html
+++ b/ejercicios.html
@@ -3,10 +3,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>Ejercicios JS</title>
 </head>
 <body>
-    
+    <main>
+        <form name="form1" action="">
+            <div><label for="angulo1">Ingrese el primer angulo: </label><input type="number" name="angulo1" id="angulo1" required/><span></span></div>
+            <div><label for="angulo1">Ingrese el segundo angulo: </label><input type="number" name="angulo2" id="angulo2" required/><span></span></div>
+            <div><label for="angulo1">Ingrese el tercer angulo: </label><input type="number" name="angulo3" id="angulo3" required/><span></span></div>
+            <input type="submit" value="submit" name="button" id="btn-submit"/>
+        </form>
+    </main>
 </body>
 <script src="./ejercicios.js"></script>
 </html>
